# creature-duel

./: .gitignore  DEVELOPMENT.md  README.md  ROADMAP.md  battle_log_master.json  claude.md  pyproject.toml
battle/: battle_engine.py  battle_state.py  turn_processor.py
battle_logs/: battle_20260331_122525_player1.json
docs/: README.md  architecture.md  master_data_summary.md  phase1_summary.md  phase2_summary.md  phase3_summary.md  phase4_summary.md  project_status.md  streamlit_integration_plan.md  streamlit_quick_start.md
entities/: creature.py  skill.py
examples/: battle_from_master.py  simple_battle.py
services/: damage_calculator.py
src/creature_duel/: __init__.py
src/creature_duel/application/services/: accuracy_calculator.py  damage_calculator.py  stat_modifier_service.py  type_effectiveness.py
src/creature_duel/battle/: battle_engine.py  battle_state.py  skill_executor.py  turn_processor.py
src/creature_duel/domain/entities/: __init__.py  (+4 more)
streamlit_app/: README.md  __init__.py  app.py
streamlit_app/pages/: 1_🎮_battle.py  2_📚_master_data.py  3_📜_battle_logs.py  4_📊_analytics.py
streamlit_app/utils/: battle_runner.py  formatters.py  visualization.py
tests/integration/: test_battle_integration.py
tests/unit/application/: test_damage_calculator.py  test_stat_modifier_service.py  test_type_effectiveness.py
tests/unit/battle/: test_skill_executor.py
tests/unit/domain/: test_ability.py  test_creature.py  test_player.py  test_stats.py  test_status_ailment.py
tests/unit/infrastructure/: test_loader.py
value_objects/: stats.py  type.py
(+12 files in other folders)
